k8s/appointment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service-deployment
  namespace: swasthya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
      - name: appointment-service
        image: appointment-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: swasthya
spec:
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
