k8s/doctor-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-frontend-deployment
  namespace: swasthya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-frontend
  template:
    metadata:
      labels:
        app: doctor-frontend
    spec:
      containers:
      - name: doctor-frontend
        image: doctor-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-frontend
  namespace: swasthya
spec:
  selector:
    app: doctor-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
