k8s/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment
  namespace: swasthya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: eureka-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: swasthya
spec:
  selector:
    app: eureka-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
