k8s/infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swasthya
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-server
  namespace: swasthya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-server
  template:
    metadata:
      labels:
        app: postgres-server
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: init-scripts
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: init-scripts
        configMap:
          name: postgres-init
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-server
  namespace: swasthya
spec:
  selector:
    app: postgres-server
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-server
  namespace: swasthya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-server
  template:
    metadata:
      labels:
        app: rabbitmq-server
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-server
  namespace: swasthya
spec:
  selector:
    app: rabbitmq-server
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
