k8s/patient-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service-deployment
  namespace: swasthya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
      - name: patient-service
        image: patient-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: swasthya
spec:
  selector:
    app: patient-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
