k8s/provider-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-service-deployment
  namespace: swasthya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provider-service
  template:
    metadata:
      labels:
        app: provider-service
    spec:
      containers:
      - name: provider-service
        image: provider-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: provider-service
  namespace: swasthya
spec:
  selector:
    app: provider-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
